--- a/demo-code/base/pyproject.toml
+++ b/demo-code/base/pyproject.toml
@@ -10,8 +10,8 @@ authors = [{ name = "Brian Clark" }, { name = "Cecil Phillip" }]
 requires-python = ">=3.11"
 
 [project.urls]
-course = "http://fillin"
-repo = "http://fillin"
+course = "https://training.talkpython.fm/courses/visual-studio-code-for-python-developers"
+repo = "https://github.com/talkpython/vscode-python-course"
 
 [project.scripts]
 podcastapi = "podcastapi.__main__:main"
