--- a/demo-code/05-managing-your-environments/pyproject.toml
+++ b/demo-code/05-managing-your-environments/pyproject.toml
@@ -9,6 +9,7 @@ readme = "README.md"
 python = "^3.11"
 tinydb = "^4.8.0"
 fastapi = {extras = ["all"], version = "^0.109.2"}
+uvloop = {version = "^0.19.0", markers = 'sys_platform != "win32"'}
 
 
 [build-system]
